--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@vitejs/plugin-react": "^1.3.1",
     "axios": "^0.26.1",
     "firebase": "^9.6.11",
+    "js-cookie": "^3.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "vite": "^2.9.5"
@@ -22,6 +23,7 @@
     "@snowpack/web-test-runner-plugin": "^0.2.2",
     "@testing-library/react": "^11.2.6",
     "@types/jest": "^27.4.0",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.25",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
