--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "jest --coverage",
     "test:watch": "npm run test -- --watch",
     "start": "nodemon --watch scripts",
-    "dev": "nodemon -x \"npm run buildrun\"  --ignore dist",
+    "dev": "NODE_ENV=development && nodemon -x \"npm run buildrun\"  --ignore dist",
     "buildrun": "npm run build:dev && npm run start:server",
     "build:dev": "rm -rf dist && node ./scripts/build.js && npx tsc --noEmit",
     "start:server": "nodemon ./dist/index.js --delay 800ms",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.13",
     "@types/express-jwt": "^6.0.2",
     "@types/graphql-depth-limit": "^1.1.2",
@@ -63,6 +64,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
